--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
     - ILLUMINATE_VERSION=5.5.* PHPUNIT_VERSION=~6.0
     - ILLUMINATE_VERSION=5.6.* PHPUNIT_VERSION=~7.0
     - ILLUMINATE_VERSION=5.7.* PHPUNIT_VERSION=~7.0
-    - ILLUMINATE_VERSION=5.8.* PHPUNIT_VERSION=^7.5 COVERAGE=true
+    - ILLUMINATE_VERSION=5.8.* PHPUNIT_VERSION=^7.5
 
 before_install:
     - echo "memory_limit=2G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
